# cpp-ini

./: CMakeLists.txt  Config.ini  ini  main  main.cpp  main.ini
clion/: CMakeLists.txt  main.cpp
clion/include/: Config.cpp  Config.h
include/: CMakeLists.txt  Config.cpp  Config.h  Ini.cpp  Ini.h  Tool.cpp  Tool.h
vs2019/CppIni/: Config.cpp  Config.h  Config.ini  CppIni.sln  CppIni.vcxproj  CppIni.vcxproj.filters  LQConfig.h  main.cpp
